# esp32-demo-gauges

demo/: Cargo.toml
demo-esp-idf/: Cargo.toml  README.md
demo-esp-idf/src/: main.rs  platform.rs
demo-esp-idf/src/drivers/: button.rs  dip_switch.rs  gate.rs  http.rs  mod.rs  race_node.rs  rgb_led.rs  wifi.rs
demo-esp-idf/tools/: dev
demo-ui/: Cargo.toml  README.md  Trunk.toml  index.html
demo-ui/assets/: style.css
demo-ui/examples/: app.rs
demo-ui/src/: app.rs  main.rs
demo/src/: lib.rs
demo/src/app/: mod.rs
demo/src/hal/: mod.rs  wifi.rs
demo/src/svc/: mod.rs
